# axum

./: Cargo.toml  README.md  setting.toml
api/: Cargo.toml
api/src/: main.rs  route.rs
api/src/config/: config.toml  config.toml.sample  mod.rs
api/src/db/: db.rs  mod.rs
api/src/db/system/entities/: sys_update_log.rs
api/src/db/system/models/: sys_menu.rs  sys_update_log.rs
api/src/middleware/: auth.rs  cache.rs  cache_skytable.rs  ctx.rs  oper_log.rs
api/src/service/service_utils/: api_utils.rs  jwt.rs  web_utils.rs
api/src/service/system/: common.rs  server_info.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_role_api.rs  sys_update_log.rs  sys_user.rs  sys_user_dept.rs  sys_user_online.rs  sys_user_role.rs
api/src/service/tasks/: mod.rs  task_builder.rs  task_runner.rs
api/src/service/tasks/task/: system.rs
api/src/service/test/: test_data_scope.rs
api/src/system/: common.rs  sys_api_db.rs  sys_dept.rs  sys_dict_data.rs  sys_dict_type.rs  sys_job.rs  sys_job_log.rs  sys_login_log.rs  sys_menu.rs  sys_oper_log.rs  sys_post.rs  sys_role.rs  sys_update_log.rs  sys_user.rs  sys_user_online.rs
api/src/test/: test_data_scope.rs
api/src/utils/: cert.rs  data_scope.rs  my_env.rs
axum-common/: Cargo.toml
axum-web/: Cargo.toml
axum-web/src/: main.rs
fast_admin/: Cargo.toml
fast_admin/src/: main.rs
fast_admin/src/controller/: Builer.rs  abstract_factory.rs  builder1.rs  chain.rs  factory.rs  iterator.rs  mod.rs  simple_factory.rs  strategy.rs  test.rs
fast_admin/src/mapper/: user_mapper.rs
fast_admin/src/service/: user_service.rs
fast_common/: Cargo.toml
fast_common/src/: lib.rs
fast_common/src/base/: base_controller.rs  base_mapper.rs  base_model.rs  base_service.rs  base_storage.rs  mod.rs
fast_common/src/common/: api_result.rs  mod.rs  orm_config.rs
fast_common/src/config/: mod.rs  orm_config.rs  path_filter.rs
fast_common/src/models/: menu.rs  role.rs  role_menu.rs  user.rs  user_role.rs
fast_common/src/service/: user_service.rs
fast_common/src/utils/: crypt_util.rs  mod.rs  toml_util.rs
