[package]
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2021"
name = "fast_admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_common = { path = "../fast_common" }
#log日志支持(必须)
axum = { version = "*" }
env_logger = { version = "*" }

tokio = { version = "*", features = ["full"] }
#时间
chrono = "*"
#orm
rbatis = { version = "*" }
#cpu_count
async-trait = "*"
num_cpus = "*"
#redis
#redis = { version = "0.17.0", features = ["async-std-comp"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
tracing = { version = "*" }
bson2 = "*"
fast_log = "*"
 