[package]
name = "fast_common"
version = "0.1.0"
authors = ["by965738071@163.com <by965738071@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.15" }
derive_builder = { version = "0.11.1" }
#json支持(必须)
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
serde_derive = { version = "*" }

#日期支持(必须)
chrono = { version = "*" }

#log日志支持(必须)
log = { version = "*" }
fast_log = { version = "*" }
env_logger = { version = "*" }

#rbatis支持
rbatis = { version = "*", default-features = false, features = ["runtime-async-std-rustls", "mysql"] }
sea-orm = { version = "*", features = ["sqlx-mysql", "runtime-actix", "debug-print", "macros"], default-features = false }
#静态初始化
lazy_static = { version = "*" }
#异步
futures = { version = "*" }

#网络请求
reqwest = { verison = "*" }
short-crypt = { version = "*" }
async_once = { version = "*" }
#解析toml
toml_edit = { verson = "*" }

validator = { version = "*" }
validator_derive = { version = "*" }
uuid = { version = "*" }
mime = { version = "*" }
jsonwebtoken = { version = "*" }
captcha = { version = "*" }
qrcode = { version = "*" }
image = { version = "*" }
async-trait = { version = "*" }
bson2 = { version = "*" }
anyhow = { version = "*" }